updated for java 21